Modificações no arquivo de build e dspace.cfg
Alterações de configuração do sistema para os arquivos de build e para dspace.cfg

Importante informar que antes desse código ir para o GITHUB, educacaolivre muitas vezes
foi trocado (erroneamente) por ensinolivre (acabei aproveitando o nome para o login :) )
Todas as string foram corrigidas, a única que se manterá a mesma, por razões históricas,
é a string do bando de dados, atualmente (e anteriormente) é ensliv abreviação para ensinolivre.
O correto seria usar eduliv agora, mas isso não irá alterar a experiência com o software. Logo,
o nome ensliv foi mantido para o nome do banco de dados.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -320,6 +320,8 @@ search.index.9 = mime:dc.format.mimetype
 search.index.10 = sponsor:dc.description.sponsorship
 search.index.11 = identifier:dc.identifier.*
 search.index.12 = language:dc.language.iso
+search.index.13 = resourceType:dc.type
+search.index.14 = profileClass:dc.classification.perfil
 
 ##### Handle settings ######
 
@@ -1400,12 +1402,13 @@ plugin.named.org.dspace.app.webui.json.JSONRequest = \
 # Default Locale
 # A Locale in the form country or country_language or country_language_variant
 # if no default locale is defined the server default locale will be used.
-default.locale = en
+default.locale = pt_BR
 
 # All the Locales, that are supported by this instance of DSpace
 # A comma-separated list of Locales. All types of Locales country, country_language, country_language_variant
 # Note that the appropriate file are present, especially that all the Messages_x.properties are there
 # may be used, e. g: webui.supported.locales = en, de
+webui.supported.locales = en, pt_BR
 
 #### Submission License substitution variables ####
 # it is possible include contextual information in the submission license using substitution variables
@@ -1938,7 +1941,7 @@ webui.suggest.enable = false
 # Enable or disable the controlled vocabulary add-on
 # Warning: this feature is not compatible with WAI (it requires javascript to function)
 #
-# webui.controlledvocabulary.enable = true
+webui.controlledvocabulary.enable = true
 
 
 #### Session invalidation #####
