--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@
 # to install DSpace. NOTE: this value will be copied over to the
 # "dspace.dir" setting in the final "dspace.cfg" file. It can be
 # modified later on in your "dspace.cfg", if needed.
-dspace.install.dir=/dspace
+dspace.install.dir=/educacaolivre
 
 # DSpace host name - should match base URL.  Do not include port number
 dspace.hostname = localhost
@@ -31,7 +31,7 @@ dspace.hostname = localhost
 dspace.baseUrl = http://localhost:8080
 
 # The user interface you will be using for DSpace. Common usage is either xmlui or jspui
-dspace.ui = xmlui
+dspace.ui = educacaolivre_ui
 
 # Full link your end users will use to access DSpace. In most cases, this will be the baseurl followed by
 # the context path to the UI you are using.
@@ -41,13 +41,13 @@ dspace.ui = xmlui
 dspace.url = ${dspace.baseUrl}/${dspace.ui}
 
 # Name of the site
-dspace.name = DSpace at My University
+dspace.name = Banco de Conteúdos
 
 # Solr server
-solr.server=http://localhost:8080/solr
+solr.server=http://localhost:8080/educacaolivre_solr
 
 # Default language for metadata values
-default.language = en_US
+default.language = pt_BR
 
 ##########################
 # DATABASE CONFIGURATION #
@@ -56,7 +56,7 @@ default.language = en_US
 # Uncomment the appropriate block below for your database.
 # postgres
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/dspace
+db.url=jdbc:postgresql://localhost:5432/ensliv
 db.username=dspace
 db.password=dspace
 
@@ -138,17 +138,17 @@ mail.registration.notify=
 # If you do not subscribe to CNRI's handle service, you can change this
 # to match the persistent URL service you use, or you can force DSpace
 # to use your site's URL, eg.
-#handle.canonical.prefix = ${dspace.url}/handle/
+handle.canonical.prefix = ${dspace.url}/handle/
 #
 # Note that this will not alter dc.identifer.uri metadata for existing
 # items (only for subsequent submissions), but it will alter the URL 
 # in JSPUI's 'identifier' message on item record pages for existing items.
 #
 # If omitted, the canonical URL prefix will be http://hdl.handle.net/
-handle.canonical.prefix = http://hdl.handle.net/
+#handle.canonical.prefix = http://hdl.handle.net/
 
 # CNRI Handle prefix
-handle.prefix = 123456789
+handle.prefix = avante
 
 #######################
 # PROXY CONFIGURATION #
