Autenticação integrada como Portal Educação livre, realizada por OAuth 2.0.
O projeto apenas com a comunicação com o servidor Oauth do portal, sem nada do dspace, pode ser encontrado neste repositório: https://bitbucket.org/ibictel/oauth

Deve ser feita a configuração correta no arquivo authentication-oauth.cfg antes da instalação. (./dspace/config/modules/authentication-oauth.cfg)

--- a/dspace-api/pom.xml
+++ b/dspace-api/pom.xml
@@ -639,6 +639,14 @@
             <version>1</version>
             <type>jar</type>
         </dependency>
+        
+        <!--Para autenticação por Oauth com o portal Educação Livre-->
+        <!--Para fazer as requisições por rest para a API-->
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
 
 </project>
