Alterações comumente utilizadas para build

--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ dspace.install.dir=/educacaolivre
 dspace.hostname = localhost
 
 # DSpace base host URL.  Include port number etc.
-dspace.baseUrl = http://localhost:8080
+dspace.baseUrl = http://200.130.8.94
 
 # The user interface you will be using for DSpace. Common usage is either xmlui or jspui
 dspace.ui = educacaolivre_ui
@@ -95,25 +95,25 @@ db.poolname = dspacepool
 #######################
 
 # SMTP mail server
-mail.server = smtp.example.com
+mail.server = smtp.gmail.com
 
 # SMTP mail server authentication username and password (if required)
 # mail.server.username = myusername
 # mail.server.password = mypassword
-mail.server.username=
-mail.server.password=
+mail.server.username = dspacemymail@gmail.com
+mail.server.password = dsuM11VROass78
 
 # SMTP mail server alternate port (defaults to 25)
-mail.server.port = 25
+mail.server.port = 465
 
 # From address for mail
-mail.from.address = dspace-noreply@myu.edu
+mail.from.address = dspacemymail@gmail.com
 
 # Currently limited to one recipient!
-mail.feedback.recipient = dspace-help@myu.edu
+mail.feedback.recipient = dspacemymail@gmail.com
 
 # General site administration (Webmaster) e-mail
-mail.admin = dspace-help@myu.edu
+mail.admin = dspacemymail@gmail.com
 
 # Recipient for server errors and alerts
 #mail.alert.recipient = email-address-here
@@ -123,6 +123,9 @@ mail.alert.recipient=
 #mail.registration.notify = email-address-here
 mail.registration.notify=
 
+mail.extraproperties = mail.smtp.socketFactory.port=465, \
+                       mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory, \
+                       mail.smtp.socketFactory.fallback=false
 
 ########################
 # HANDLE CONFIGURATION #
