Buscando o perfil do usuário (nome, sobrenome e email), criando o eperson com os dados corretos. Toda vez que se autenticar, será atualizado o nome e sobre nome. Adicionei o idioma quando cria o eperson. EL-14

--- a/dspace/config/modules/authentication-oauth.cfg
+++ b/dspace/config/modules/authentication-oauth.cfg
@@ -20,6 +20,9 @@ api.url=http://api.educacaolivre.org.br/oauth
 #Nome do cookie que será gerado pela API, que possui o token.
 api.cookie.name=token
 
+#Endereço da api rest que fornece os dados do perfil do usuário
+api.profile.address=http://api.educacaolivre.org.br/v1/boe-candidato
+
 #Id da aplicação cliente, no caso o dspace.
 application.client.id=edulivreclient
 #Senha da aplicação cliente.
@@ -35,3 +38,6 @@ token.updated.name=updatedToken
 #Se necessário, o nome de um grupo pode ser informado aqui e todos os usuários que forem logados fazendo uso da 
 #autenticação com Oauth serão automaticamente adicionados neste grupo.
 # login.specialgroup = group-name
+
+#Idioma padrão do usuário
+login.defaultlanguage=pt_BR
